@@ -103,6 +103,29 @@ describe 'a Tokyo Cabinet table' do
     end
   end
 
+  it 'should correctly abort transactions' do
+    @t.transaction {
+      @t['pk0'] = { 'a' => 'A' }
+      @t.abort
+    }
+    @t.size.should.be.zero
+  end
+
+  it 'should rollback transactions with errors' do
+    @t.transaction {
+      @t['pk0'] = { 'a' => 'A' }
+      raise "something goes wrong"
+    }
+    @t.size.should.be.zero
+  end
+
+  it 'should commit successful transactions' do
+    @t.transaction do
+      @t['pk0'] = { 'a' => 'A' }
+    end
+    @t['pk0'].should.equal({ 'a' => 'A' })
+  end
+
 end
 
 def prepare_table_with_data
